--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pers.css">
-    <title>Your Name - Portfolio</title>
+    <title>John Kevin - Personal Portfolio</title>
   <style>
     body {
     font-family: 'Arial', sans-serif;
